2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/efi/efidisk.c (name_devices): Don't make disks
	out of partitions containing other partitions.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Pass PCIINFO on BIOS to OpenBSD since otherwise it fails to boot
	on some qemu versions with GRUB.

	* include/grub/i386/openbsd_bootarg.h (OPENBSD_BOOTARG_PCIBIOS): New
	define.
	(grub_openbsd_bootarg_pcibios): New struct.
	* grub-core/loader/i386/bsd.c (grub_openbsd_boot) [GRUB_MACHINE_PCBIOS]:
	Add PCIINFO.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Trim firmware output on EFI.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (vga_text): Disable on muliboot
	and coreboot since it's already in kernel.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_util_get_dm_node_linear_info): Moved from here...
	* grub-core/kern/emu/hostdisk.c (grub_util_get_dm_node_linear_info):
	to here. New return value start. All users updated.
	Recursively scan linear mappings.
	* include/grub/emu/hostdisk.h (grub_util_get_dm_node_linear_info): New
	proto.
	* grub-core/kern/emu/hostdisk.c (grub_hostdisk_find_partition_start):
	Use grub_util_get_dm_node_linear_info.
	* util/getroot.c (convert_system_partition_to_system_disk): Use
	grub_util_info rather than grub_dprintf.
	(grub_util_biosdisk_get_grub_dev): Add a new grub_util_info.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Move handling of GRUB_QEMU_OPTS to grub-shell so that make check works.

	* Makefile.am: Remove GRUB_QEMU_OPTS handling.
	* tests/util/grub-shell.in: Add GRUB_QEMU_OPTS handling.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/types.h (grub_set_unaligned64): New function.
	* util/grub-setup.c (write_rootdev): Use unaligned access functions.
	(setup): Likewise.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>
